

message CommandOption
{
 required string option_name = 1 [default = "" ];
 required string option_value =2 [default = "" ];
}

message ChannelCommand
{
 required string command_type = 1 [ default = "" ];
 required string command_action = 2 [ default = ""];
 repeated CommandOption options = 3;

}
