message NackMessage{
	required string receiver = 1;
	required uint32 message_num = 7;
	repeated uint32  missing_packets = 8;
}

message IgnoreMessage{
	required uint32 message_num = 1;
}
